Add: ルーティングの設定、レイアウトの調整

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#top</h1>
-<p>Find me in app/views/static_pages/top.html.erb</p>
+<div>
+    <h1>Winning Rate</h1>
+    <p>ウイニングイレブンのRate変動を視覚的に表現するサービス</p>
+    <%= link_to '新規登録', '#', class: 'btn btn-outline-dark' %>
+    <br>
+    <%= link_to 'ログイン', '#', class: 'btn btn-outline-dark' %>
+</div>
