--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the static_pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+div {
+    margin-top: 100px;
+    text-align: center;
+    h1 {
+        font-size: 60px;
+    }
+    p {
+        margin-bottom: 100px;
+        font-size: 20px;
+    }
+    .btn {
+        margin-bottom: 20px;
+        width: 200px;
+        font-size: 20px;
+    }
+  }
