--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <%= current_user.email %>としてログイン中 |
+      <%= link_to 'ログアウト', logout_path, method: :delete %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
