--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,7 @@
-<div>
+<div class="top-inner-text">
     <h1>Winning Rate</h1>
     <p>ウイニングイレブンのRate変動を視覚的に表現するサービス</p>
-    <%= link_to '新規登録', '#', class: 'btn btn-outline-dark' %>
+    <%= link_to '新規登録', new_user_path, class: 'btn btn-outline-dark' %>
     <br>
-    <%= link_to 'ログイン', '#', class: 'btn btn-outline-dark' %>
+    <%= link_to 'ログイン', login_path, class: 'btn btn-outline-dark' %>
 </div>
