--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <%= link_to 'ログアウト', logout_path, class: 'nav-link', method: :delete %>
+                    <%= link_to (t 'defaults.logout'), logout_path, class: 'nav-link', method: :delete %>
                 </li>
             </ul>
         </div>
