--- a/app/views/battle_records/past.html.erb
+++ b/app/views/battle_records/past.html.erb
@@ -3,6 +3,10 @@
         <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <%= form_with model: @battle_record, local: true do |f| %>
                 <div class="form-group">
+                    <%= f.label :title %>
+                    <%= f.collection_select :winning_eleven_id, WinningEleven.all, :id, :title %>
+                </div>
+                <div class="form-group">
                     <%= f.label :rate %>
                     <%= f.text_field :rate, class: 'form-control' %>
                 </div>
