--- a/app/views/battle_records/current.html.erb
+++ b/app/views/battle_records/current.html.erb
@@ -4,7 +4,7 @@
             <%= form_with model: @battle_record, local: true do |f| %>
                 <div class="form-group">
                     <%= f.label :title %>
-                    <%= f.collection_select :winning_eleven_id, WinningEleven.all, :id, :title %>
+                    <%= f.collection_select :winning_eleven_id, WinningEleven.current, :id, :title %>
                 </div>
                 <div class="form-group">
                     <%= f.label :rate %>
