Add: 戦績一覧機能の作成

--- a/app/views/battle_records/current.html.erb
+++ b/app/views/battle_records/current.html.erb
@@ -3,7 +3,7 @@
         <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <%= form_with model: @battle_record, local: true do |f| %>
                 <div class="form-group d-inline-flex flex-column">
-                    <%= f.label :title %>
+                    <%= f.label :title, WinningEleven.human_attribute_name(:title) %>
                     <%= f.collection_select :winning_eleven_id, WinningEleven.current, :id, :title %>
                 </div>
                 <div class="form-group">
