--- a/app/javascript/stylesheets/top.scss
+++ b/app/javascript/stylesheets/top.scss
@@ -7,6 +7,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        width: 100%;
         text-align: center;
 
         h1 {
@@ -20,6 +21,20 @@
         
         .btn {
             padding: 0.75rem 7.5rem;
+        }
+
+        @media screen and (max-width: 767px) {
+            h1 {
+                font-size: 3rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .btn {
+                font-size: 0.9rem;
+            }
         }
     }
 }
