--- a/app/views/monthlies/index.html.erb
+++ b/app/views/monthlies/index.html.erb
@@ -1,4 +1,4 @@
-<div style="margin: 0 auto; width: 500px">
+<div class="chart-wrapper">
     <canvas id="myChart" height="300"></canvas>
     <canvas id="myChart1" height="300"></canvas>
 </div>
