--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,7 @@
 <div class="top-wrapper">
     <div class="top-inner-text">
         <h1>Winning Rate</h1>
-        <p>ウイニングイレブンのRate変動を視覚的に表現するサービス</p>
+        <p>ウイニングイレブンのRate変動を<br>視覚的に表現するサービス</p>
         <div class="d-inline-flex flex-column">
             <%= link_to '新規登録', new_user_path, class: 'btn btn-primary rounded-pill mb-4' %>
             <%= link_to 'ログイン', login_path, class: 'btn btn-primary rounded-pill' %>
