--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
   <body>
     <% if logged_in? %>
       <%= render 'shared/header' %>
+    <% else %>
+      <%= render 'shared/before_login_header' %>
     <% end %>
     <%= yield %>
     <%= render 'shared/footer' %>
