Fix: レイアウトの調整

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="chart-wrapper">
+<div class="chart-wrapper mb-5">
     <canvas id="myChart" height="300"></canvas>
     <canvas id="myChart1" height="300"></canvas>
 </div>
