--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,4 @@
 @import 'top';
-@import 'chart';
 @import '~bootstrap/scss/bootstrap';
 
 body {
@@ -11,4 +10,15 @@ body {
 footer {
     margin-top: auto;
     text-align: center;
+}
+
+.chart-wrapper {
+    margin: 0 auto;
+    width: 500px;
+}
+
+@media screen and (max-width: 500px) {
+    .chart-wrapper {
+        width: 100%;
+    }
 }
