--- a/app/views/battle_records/past.html.erb
+++ b/app/views/battle_records/past.html.erb
@@ -4,7 +4,7 @@
             <%= form_with model: @battle_record, local: true do |f| %>
                 <div class="form-group">
                     <%= f.label :title, WinningEleven.human_attribute_name(:title) %>
-                    <%= f.collection_select :winning_eleven_id, WinningEleven.past, :id, :title, { prompt: "選択してください" }, { class: "form-control"}%>
+                    <%= f.collection_select :winning_eleven_id, WinningEleven.past.order(created_at: :desc), :id, :title, {}, { class: "form-control"}%>
                 </div>
                 <div class="form-group">
                     <%= f.label :rate %>
@@ -14,7 +14,6 @@
                     <%= f.label :win_rate %>
                     <%= f.text_field :win_rate, class: 'form-control' %>
                 </div>
-                <%= f.hidden_field :name, value: params[:name] %>
                 <%= f.submit (t 'defaults.register'), class: 'btn btn-primary' %>
             <% end %>
         </div>
