--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,18 +1,20 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <% if controller.controller_name == "static_pages" && controller.action_name == "top" %>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <%= link_to (t 'defaults.login'), login_path, class: 'nav-link' %>
-                </li>
-                <li class="nav-item">
-                    <%= link_to (t 'defaults.signup'), new_user_path, class: 'nav-link' %>
-                </li>
-            </ul>
-        </div>
-    </nav>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <%= link_to (t 'defaults.login'), login_path, class: 'nav-link' %>
+                    </li>
+                    <li class="nav-item">
+                        <%= link_to (t 'defaults.signup'), new_user_path, class: 'nav-link' %>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    <% end %>
 </header>
