Add: タイトルを動的に出力

--- a/app/views/monthlies/index.html.erb
+++ b/app/views/monthlies/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, @winning_eleven.title) %>
 <div class="chart-wrapper">
     <canvas id="primaryChart" height="300"></canvas>
     <canvas id="secondaryChart" height="300"></canvas>
