--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, t('.title')) %>
 <div class="chart-wrapper mb-5">
     <canvas id="primaryChart" height="300"></canvas>
     <canvas id="secondaryChart" height="300"></canvas>
