--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,22 @@
     <canvas id="secondaryChart" height="300"></canvas>
 </div>
 <script>
+Chart.plugins.register({
+    afterDraw: function(chart) {
+        if (chart.data.datasets[0].data.every(item => item === 0)) {
+            const ctx = chart.chart.ctx;
+            const width = chart.chart.width;
+            const height = chart.chart.height;
+            chart.clear();
+            ctx.save();
+            ctx.textAlign = 'center';
+            ctx.textBaseline = 'middle';
+            ctx.fillText('データがありません', width / 2, height / 2);
+            ctx.restore();
+        }
+    }
+});
+
 var canvas = document.getElementById('primaryChart');
 var ctx = canvas.getContext('2d');
 var primaryChart = new Chart(ctx, {
@@ -28,9 +44,9 @@ var primaryChart = new Chart(ctx, {
 canvas.onclick = function(evt) {
     var activePoints = primaryChart.getElementsAtEvent(evt);
     if (activePoints[0]) {
-        var chartData = activePoints[0]['_chart'].config.data;
-        var idx = activePoints[0]['_index'];
-        var label = chartData.labels[idx];
+        const chartData = activePoints[0]['_chart'].config.data;
+        const idx = activePoints[0]['_index'];
+        const label = chartData.labels[idx];
         location.href = 'monthlies?label=' + label;
     }
 };
@@ -60,9 +76,9 @@ var secondaryChart = new Chart(ctx, {
 canvas.onclick = function(evt) {
     var activePoints = secondaryChart.getElementsAtEvent(evt);
     if (activePoints[0]) {
-        var chartData = activePoints[0]['_chart'].config.data;
-        var idx = activePoints[0]['_index'];
-        var label = chartData.labels[idx];
+        const chartData = activePoints[0]['_chart'].config.data;
+        const idx = activePoints[0]['_index'];
+        const label = chartData.labels[idx];
         location.href = 'monthlies?label=' + label;
     }
 };
