--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <% content_for(:title, t('.title')) %>
 <div class="container">
     <div class="row">
-        <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-            <h1><%= t '.title' %></h1>
+        <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <h2 class="my-5 text-center"><%= t '.title' %></h1>
             <%= form_with model: @user, local: true do |f| %>
                 <div class="form-group">
                     <%= f.label :email %>
@@ -16,7 +16,7 @@
                     <%= f.label :password_confirmation %>
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                 </div>
-                <%= f.submit (t 'defaults.register'), class: 'btn btn-primary' %>
+                <%= f.submit (t 'defaults.register'), class: 'btn btn-primary btn-block mb-3' %>
             <% end %>
             <div class='text-center'>
                 <%= link_to (t '.to_login_page'), login_path %>
