--- a/app/views/battle_records/current.html.erb
+++ b/app/views/battle_records/current.html.erb
@@ -15,7 +15,7 @@
                     <%= f.label :win_rate %>
                     <%= f.text_field :win_rate, class: 'form-control' %>
                 </div>
-                <%= f.submit (t 'defaults.compare'), class: 'btn btn-primary' %>
+                <%= f.submit (t 'defaults.register'), class: 'btn btn-primary' %>
             <% end %>
         </div>
     </div>
