--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <%= link_to t('battle_records.index.title'), battle_records_path, class: 'nav-link' %>
+                    <%#= link_to t('battle_records.index.title'), battle_records_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
                     <%= link_to (t 'defaults.logout'), logout_path, class: 'nav-link', method: :delete %>
