--- a/app/javascript/stylesheets/top.scss
+++ b/app/javascript/stylesheets/top.scss
@@ -1,4 +1,5 @@
 .top-wrapper {
+    background-color: #e9ecef;
     height: 100vh;
     position: relative;
 
@@ -15,7 +16,6 @@
         }
 
         p {
-            margin-bottom: 5rem;
             font-size: 1.25rem;
         }
 
