Fix: レイアウトの調整

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -7,7 +7,7 @@
 <div class="row justify-content-around mt-5">
     <div class="col-sm-4">
         <img src="<%= asset_pack_path 'media/images/top.gif' %>" class="img-fluid">
-        <p class="m-3">グラフをクリックして、月別のグラフを見ることができます。来月以降に戦績を登録することで、グラフが追加されます。</p>
+        <p class="m-3">グラフをクリックして、月別のグラフを見ることができます。戦績を登録した翌月以降に再度戦績を登録することで、グラフが追加されます。</p>
     </div>
     <div class="col-sm-4">
         <img src="<%= asset_pack_path 'media/images/top.png' %>" class="img-fluid">
