--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -85,7 +85,7 @@ canvas.onclick = function(evt) {
 </script>
 <div class="text-center">
     <div class="d-inline-flex flex-column">
-        <%#= link_to '過去作の戦績を入力', {controller: "battle_records", action: "new", name: "past"}, class: 'btn btn-primary mb-4' %>
-        <%= link_to '現在の戦績を入力', {controller: "battle_records", action: "new", name: "current"}, class: 'btn btn-primary' %>
+        <%#= link_to '過去作の戦績を入力', {controller: "battle_records", action: "new", name: "past"}, class: 'btn btn-secondary rounded-pill mb-4' %>
+        <%= link_to '現在の戦績を入力', {controller: "battle_records", action: "new", name: "current"}, class: 'btn btn-secondary rounded-pill' %>
     </div>
 </div>
