--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
                     <%= f.label :password_confirmation %>
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                 </div>
-                <%= f.submit (t 'defaults.register'), class: 'btn btn-primary btn-block mb-3' %>
+                <%= f.submit (t 'defaults.register'), class: 'btn btn-secondary btn-block mb-3' %>
             <% end %>
             <div class='text-center'>
                 <%= link_to (t '.to_login_page'), login_path %>
