--- a/app/views/battle_records/current.html.erb
+++ b/app/views/battle_records/current.html.erb
@@ -9,6 +9,7 @@
                 </div>
                 <div class="form-group">
                     <%= f.label :rate %>
+                    <span class="badge badge-danger">必須</span>
                     <%= f.text_field :rate, class: 'form-control' %>
                 </div>
                 <div class="form-group">
