--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-            <h2 class="my-5 text-center"><%= t '.title' %></h1>
+            <h2 class="my-5 text-center"><%= t '.title' %></h2>
             <%= form_with model: @user, local: true do |f| %>
                 <div class="form-group">
                     <%= f.label :email %>
@@ -11,6 +11,7 @@
                 <div class="form-group">
                     <%= f.label :password %>
                     <%= f.password_field :password, class: 'form-control' %>
+                    <small class="text-muted">英数字8文字以上で入力してください</small>
                 </div>
                 <div class="form-group">
                     <%= f.label :password_confirmation %>
