Fix: レイアウトの調整

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,6 +11,11 @@ main {
     flex: 1;
 }
 
+footer {
+    background-color: #f8f9fa;
+    margin-top: 5rem;
+}
+
 .chart-wrapper {
     margin: 0 auto;
     width: 425px;
