--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-            <h4 class="my-5 text-center"><%= t('.title') %></h4>
+            <h4 class="text-center my-5"><%= t('.title') %></h4>
             <%= form_with model: @user, url: password_reset_path(@token), local: true do |f| %>
                 <div class="form-group">
                     <%= f.label :email %>
