--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
                     <%= link_to (t 'battle_records.index.title'), battle_records_path, class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to (t 'users.edit.title'), edit_user_path(current_user), class: 'nav-link' %>
+                    <%= link_to (t 'users.show.title'), user_path(current_user), class: 'nav-link' %>
                 </li>
                 <li class="nav-item">
                     <%= link_to (t 'defaults.logout'), logout_path, class: 'nav-link', method: :delete %>
