--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,10 @@
         <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
             <h5 class="text-center mt-5">Twitterで登録</h5>
             <div class="text-center mt-4">
-                <%= link_to (t 'defaults.register'), auth_at_provider_path(provider: :twitter), class: 'btn btn-primary'%>
+                <%= link_to auth_at_provider_path(provider: :twitter), class: 'btn btn-twitter' do %>
+                    <i class="fab fa-twitter"></i>
+                    Twitterで登録
+                <% end %>
             </div>
             <p class="or mt-5">または</p>
             <h5 class="text-center my-5">メールアドレスで登録</h5>
