--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,7 +1,7 @@
 <div class="top-wrapper">
     <div class="top-inner-text">
-        <h1>WeRate</h1>
-        <p>ウイニングイレブンのRate変動を<br>視覚的に表現するサービス</p>
+      <img src="<%= asset_pack_path 'media/images/logo.png' %>">
+      <p>ウイニングイレブンのRate変動を<br>視覚的に表現するサービス</p>
     </div>
 </div>
 <div class="row justify-content-around mt-5">
