Add: お問い合わせフォームの追加

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "プライバシーポリシー", "#", class: "text-dark" %>
       </div>
       <div class="col-lg-2 col-md-4 mb-3">
-        <%= link_to "お問い合わせ", "#", class: "text-dark" %>
+        <%= link_to "お問い合わせ", "https://docs.google.com/forms/d/e/1FAIpQLScrmSLxzu3Ua_PsoXELgvgMhahqEFDDCtkWjWpLlTskaRo1Bw/viewform?embedded=true", target: :_blank, rel: "noopener noreferrer", class: "text-dark" %>
       </div>
     </div>
   </div>
