--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,10 +2,10 @@
   <div class="container text-center">
     <div class="row mt-3">
       <div class="col-lg-2 offset-lg-3 col-md-4 mb-3">
-        <%= link_to "利用規約", "#", class: "text-dark" %>
+        <%= link_to "利用規約", terms_path, class: "text-dark" %>
       </div>
       <div class="col-lg-2 col-md-4 mb-3">
-        <%= link_to "プライバシーポリシー", "#", class: "text-dark" %>
+        <%= link_to "プライバシーポリシー", privacy_path, class: "text-dark" %>
       </div>
       <div class="col-lg-2 col-md-4 mb-3">
         <%= link_to "お問い合わせ", "https://docs.google.com/forms/d/e/1FAIpQLScrmSLxzu3Ua_PsoXELgvgMhahqEFDDCtkWjWpLlTskaRo1Bw/viewform?embedded=true", target: :_blank, rel: "noopener noreferrer", class: "text-dark" %>
