--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,10 +26,8 @@
                     <%= f.password_field :password_confirmation, class: 'form-control' %>
                 </div>
                 <%= f.submit (t 'defaults.register'), class: 'btn btn-secondary btn-block mb-3' %>
+                <small>登録することで、<%= link_to "利用規約", terms_path, target: :_blank, rel: "noopener noreferrer" %>、<%= link_to "プライバシーポリシー", privacy_path, target: :_blank, rel: "noopener noreferrer" %>に同意するものとします</small>
             <% end %>
-            <div class='text-center'>
-                <%= link_to (t '.to_login_page'), login_path %>
-            </div>
         </div>
     </div>
 </div>
